tests/NormalTests/paczka1/small_fuzzy/59897417.err
Error in line 1: A597 S671 15,0
Error in line 2: A597 A125 44,3
Error in line 5: 8CpSPd S671 33,7
Error in line 14: ZNUzepoYPK S671 32,4
